@startuml DangKyTaiKhoan_ClassDiagram
title Class Diagram: Đăng ký tài khoản

' --- STYLE CONFIGURATION ---
skinparam {
    ClassBackgroundColor White
    ClassBorderColor #2D3E50
    ArrowColor #2D3E50
    DefaultFontName "Arial"
    DefaultFontSize 24
    Padding 5
}

' --- BOUNDARY LAYER ---
class "ScreenRegister" as ScreenRegister <<boundary>> {
    - txtEmail: TextBox
    - txtPassword: TextBox
    - txtConfirmPassword: TextBox
    - btnRegister: Button
    + btnRegister_Click(): void
}

' --- BUSINESS LAYER ---
class "User" as User <<control>> {
    - email: string
    - password: string
    + register(email: string, password: string): boolean
}

' --- DATABASE LAYER ---
class "UserDB" as UserDB <<entity>> {
    + checkEmailExists(email: string): boolean
    + insert(user: User): boolean
}

' --- RELATIONSHIPS ---
ScreenRegister "1" --> "1" User
User "1" --> "1" UserDB

@enduml
